# audioToText

./: .gitignore  README.md  pyproject.toml
src/att/: main.py
src/att/conf/: constants.py
src/att/core/: fh_transcriptor.py  model_getter.py  transcriptor.py  vox_transcriptor.py  wcpp_transcriptor.py
src/att/helper/: audio_converter.py  log_manager.py  model_getter.py  utils.py
src/att/transcriptions/: ZOOM0001.srt  ZOOM0001.txt  aimes.srt  aimes.txt  clinstructions.srt  clinstructions.txt
